data/derived/sp14/progs/unify/prog1786.ml.out
Characters 186-191:
  helper (seen',rest') 
                ^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
